<resources>
    <string name="app_name">PokemonTest</string>
    <string name="tv_title_poke_list">Lista de Pokemones</string>
    <string name="tv_title_poke_detail">Detalle Pokemones</string>

    <string name="login_fragment_title">Login</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="login_hint_email">Correo Electrónico</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_button_login">Iniciar Sesión</string>
    <string name="login_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login_register_text">¿No tienes cuenta? Regístrate aquí</string>
    <string name="login_logo_description">Logo de la aplicación</string>

    <string name="error_get_poke_list">Error al obtener lista de pokemones</string>
    <string name="error_get_poke_detail">Error al cargar los detalles del Pokemon</string>
    <string name="error_get_poke_detail_habilities">Sin habilidades</string>
    <string name="error_unexpected">Se produjo un error inesperado</string>
    <string name="error_loading_pokemon">Error al cargar la lista de Pokémon.</string>

    <string name="abilities">Habilidades</string>

    <string name="profile">Perfil de usuario</string>
    <string name="statistics">Estadísticas</string>
    <string name="pokemon_viewed_count">Pokémon Vistos:</string>
    <string name="favorite_pokemon_count">Total Favoritos:</string>
</resources>