<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/pokeListFragment"
        android:name="com.example.pokemontest.ui.pokelist.PokeListFragment"
        android:label="@string/tv_title_poke_list"
        tools:layout="@layout/fragment_poke_list">
        <action
            android:id="@+id/action_pokeListFragment_to_pokeDetailFragment"
            app:destination="@id/pokeDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/pokeDetailFragment"
        android:name="com.example.pokemontest.ui.pokedetail.PokeDetailFragment"
        android:label="@string/tv_title_poke_detail"
        tools:layout="@layout/fragment_poke_detail">
        <argument
            android:name="domainPokemon"
            app:argType="com.example.pokemontest.domain.model.DomainPokemon" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.pokemontest.ui.login.LoginFragment"
        android:label="@string/login_fragment_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_pokeListFragment"
            app:destination="@id/pokeListFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/profileFragmente"
        android:name="com.example.pokemontest.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>